# GeoRagBackend

./: .gitignore  Dockerfile  Makefile  README.md  app.py  dependencies.py  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.docker/: .env.example
.docker/nginx/: nginx.conf  proxy_params
configs/: .env.example  Environment.py
errors/: errors.py  handlers.py
migrations/versions/: 80122410cad3_add_user.py
models/: BaseModel.py  __init__.py  dataset.py  document.py  geofeature.py  image_record.py  user.py
repositories/: dataset_repository.py  document_repository.py  geofeature_repository.py  image_record_repository.py  user_repository.py
repositories/mixins/: crud.py
routing/v1/: __init__.py  auth.py  datasets.py  documents.py  geo.py  images.py  ml.py
schemas/: __init__.py  auth.py  dataset.py  document.py  geofeature.py  image_record.py  ml.py
services/: auth.py  dataset.py  document.py  image_record.py  ml_client.py  ml_proxy.py  storage.py
services/mixins/: crud.py
utils/: utils.py
