[tool.ruff]
exclude = ["models/__init__.py"]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
venvPath = "."
venv      = ".venv"

[project]
authors = [
    {name = "kirill", email = "shkolenko02-03-2004@mail.ru"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "fastapi[all]<1.0.0,>=0.103.0",
    "alembic<2.0.0,>=1.11.3",
    "loguru<1.0.0,>=0.7.0",
    "ruff<1.0.0,>=0.3.7",
    "pre-commit<4.0.0,>=3.7.0",
    "asyncpg<1.0.0,>=0.29.0",
    "SQLAlchemy<3.0.0,>=2.0.21",
    "pydantic-settings<3.0.0,>=2.0.3",
    "python-jose[cryptography]<4.0.0,>=3.3.0",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "bcrypt==4.3.0",
    "boto3<2.0.0,>=1.28.0",
    "anyio<5.0.0,>=3.7.0",
    "httpx<1.0.0,>=0.27.0",
]
name = "fastapitemplate"
version = "0.1.0"
description = ""
readme = "README.md"
